--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.3",
     "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
-    "description": "TypeScript parsed with Babel 7 | React, Redux, Jest & 🔥 reload | ESLint + @typescript-eslint",
+    "description": "React, Redux, Jest & 🔥 reload | TypeScript parsed with Babel 7 | ESLint + @typescript-eslint",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tenemo/reactplate.git"
@@ -14,156 +14,28 @@
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "scripts": {
         "start": "cross-env NODE_ENV=development npm run open:src",
-        "prebuild": "npm run tsc && npm run lint && npm test && npm run cleanDist",
-        "build": "cross-env NODE_ENV=production babel-node config/build",
-        "build:analyze": "cross-env NODE_ENV=production ANALYZE=true babel-node config/build",
-        "build:skip": "cross-env NODE_ENV=production babel-node config/build",
+        "prebuild": "npm run lint && npm run tsc && npm test && npm run cleanDist",
+        "build": "cross-env NODE_ENV=production babel-node config/build --extensions '.ts'",
+        "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true babel-node config/build --extensions '.ts'",
+        "build:skip": "npm run cleanDist && cross-env NODE_ENV=production babel-node config/build --extensions '.ts'",
         "cleanDist": "rimraf ./dist && mkdir dist",
         "eslint": "eslint src config --ext js,jsx,ts,tsx",
         "eslint:fix": "eslint src config --ext js,jsx,ts,tsx --fix",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
-        "open:dist": "cross-env webpack-dev-server --port 4000 --contentBase dist",
-        "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.js",
+        "open:dist": "http-server dist --port 4000  --proxy http://localhost:4000?",
+        "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.ts",
         "tsc": "tsc",
         "test": "cross-env NODE_ENV=test jest",
         "test:update": "npm run test -- --update",
         "test:coverage": "npm run test -- --coverage",
         "test:watch": "npm run test -- --watch"
     },
-    "engines": {
-        "node": ">=9"
-    },
-    "dependencies": {
-        "axios": "^0.19.2",
-        "connected-react-router": "^6.8.0",
-        "core-js": "^3.6.5",
-        "history": "^4.10.1",
-        "normalize.css": "^8.0.1",
-        "npm": "^6.14.5",
-        "react": "16.13.1",
-        "react-dom": "16.13.1",
-        "react-helmet-async": "^1.0.6",
-        "react-redux": "^7.2.0",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
-        "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0",
-        "reselect": "^4.0.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/node": "^7.8.7",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.4",
-        "@babel/preset-typescript": "^7.9.0",
-        "@hot-loader/react-dom": "16.13.0",
-        "@types/autoprefixer": "^9.7.2",
-        "@types/axios": "^0.14.0",
-        "@types/chalk": "^2.2.0",
-        "@types/circular-dependency-plugin": "^5.0.0",
-        "@types/core-js": "^2.5.3",
-        "@types/enzyme": "^3.10.5",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/enzyme-to-json": "^1.5.3",
-        "@types/eslint": "^6.8.0",
-        "@types/eslint-plugin-prettier": "^3.1.0",
-        "@types/history": "^4.7.5",
-        "@types/html-webpack-plugin": "^3.2.2",
-        "@types/immutable": "^3.8.7",
-        "@types/jest": "^25.2.1",
-        "@types/jest-cli": "^24.3.0",
-        "@types/jsdom": "^16.2.1",
-        "@types/mini-css-extract-plugin": "^0.9.1",
-        "@types/node": "^13.13.5",
-        "@types/node-sass": "^4.11.0",
-        "@types/npm": "^2.0.31",
-        "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
-        "@types/prettier": "^2.0.0",
-        "@types/react": "^16.9.35",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-hot-loader": "^4.1.1",
-        "@types/react-redux": "^7.1.8",
-        "@types/react-router": "^5.1.7",
-        "@types/react-router-dom": "^5.1.5",
-        "@types/redux": "^3.6.0",
-        "@types/redux-devtools-extension": "^2.13.2",
-        "@types/redux-logger": "^3.0.7",
-        "@types/redux-thunk": "^2.1.0",
-        "@types/reselect": "^2.2.0",
-        "@types/rimraf": "^3.0.0",
-        "@types/stylelint": "^9.10.1",
-        "@types/terser-webpack-plugin": "^2.2.0",
-        "@types/typescript": "^2.0.0",
-        "@types/webpack": "^4.41.12",
-        "@types/webpack-bundle-analyzer": "^2.13.3",
-        "@types/webpack-dev-server": "^3.10.1",
-        "@types/webpack-env": "^1.15.2",
-        "@types/webpack-merge": "^4.1.5",
-        "@typescript-eslint/eslint-plugin": "^2.32.0",
-        "@typescript-eslint/parser": "^2.32.0",
-        "autoprefixer": "^9.7.6",
-        "awesome-typescript-loader": "^5.2.1",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "^25.5.1",
-        "babel-loader": "^8.1.0",
-        "babel-plugin-module-resolver": "^4.0.0",
-        "chalk": "^4.0.0",
-        "circular-dependency-plugin": "^5.2.0",
-        "cross-env": "^7.0.2",
-        "css-loader": "^3.5.3",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.2",
-        "enzyme-to-json": "^3.4.4",
-        "eslint": "^7.0.0",
-        "eslint-config-airbnb": "^18.1.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-html": "^6.0.2",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jest": "^23.10.0",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "2.5.1",
-        "eventsource-polyfill": "^0.9.6",
-        "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.3.0",
-        "husky": "^4.2.5",
-        "immutable": "^4.0.0-rc.12",
-        "jest": "^26.0.1",
-        "jest-cli": "^26.0.1",
-        "jsdom": "^16.2.2",
-        "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.14.1",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
-        "postcss-flexbugs-fixes": "^4.2.1",
-        "postcss-html": "^0.36.0",
-        "postcss-loader": "^3.0.0",
-        "prettier": "^2.0.5",
-        "prettier-eslint": "^9.0.1",
-        "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.12.21",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-logger": "^3.0.6",
-        "rimraf": "^3.0.2",
-        "sass-loader": "^8.0.2",
-        "seamless-immutable": "^7.1.4",
-        "style-loader": "^1.2.1",
-        "stylelint": "^13.3.3",
-        "stylelint-config-prettier": "^8.0.1",
-        "stylelint-config-recommended": "^3.0.0",
-        "stylelint-config-recommended-scss": "^4.2.0",
-        "stylelint-scss": "^3.17.2",
-        "terser-webpack-plugin": "^3.0.1",
-        "typescript": "^3.8.3",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.43.0",
-        "webpack-bundle-analyzer": "^3.7.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^4.2.2"
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint && npm run tsc",
+            "pre-push": "npm test"
+        }
     },
     "browserslist": [
         "> 0.5%",
@@ -171,6 +43,148 @@
         "not IE < 11",
         "not op_mini all"
     ],
+    "engines": {
+        "node": ">=9"
+    },
+    "dependencies": {
+        "@babel/runtime-corejs3": "^7.12.5",
+        "@types/date-fns": "^2.6.0",
+        "axios": "^0.21.1",
+        "connected-react-router": "^6.8.0",
+        "core-js": "^3.8.2",
+        "date-fns": "^2.16.1",
+        "history": "^5.0.0",
+        "normalize.css": "^8.0.1",
+        "npm": "^6.14.10",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-helmet-async": "^1.0.7",
+        "react-redux": "^7.2.2",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
+        "reselect": "^4.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/node": "^7.12.10",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-react": "^7.12.10",
+        "@babel/preset-typescript": "^7.12.7",
+        "@hot-loader/react-dom": "17.0.1",
+        "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
+        "@types/autoprefixer": "^9.7.2",
+        "@types/axios": "^0.14.0",
+        "@types/chalk": "^2.2.0",
+        "@types/circular-dependency-plugin": "^5.0.1",
+        "@types/core-js": "^2.5.4",
+        "@types/css-minimizer-webpack-plugin": "^1.1.1",
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/enzyme-to-json": "^1.5.4",
+        "@types/eslint": "^7.2.6",
+        "@types/eslint-plugin-prettier": "^3.1.0",
+        "@types/history": "^4.7.8",
+        "@types/html-webpack-plugin": "^3.2.4",
+        "@types/http-server": "^0.10.1",
+        "@types/immutable": "^3.8.7",
+        "@types/jest": "^26.0.19",
+        "@types/jest-cli": "^24.3.0",
+        "@types/jsdom": "^16.2.5",
+        "@types/mini-css-extract-plugin": "^1.2.2",
+        "@types/node": "^14.14.20",
+        "@types/node-sass": "^4.11.1",
+        "@types/npm": "^2.0.31",
+        "@types/prettier": "^2.1.6",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-hot-loader": "^4.1.1",
+        "@types/react-redux": "^7.1.15",
+        "@types/react-router": "^5.1.9",
+        "@types/react-router-dom": "^5.1.7",
+        "@types/redux": "^3.6.0",
+        "@types/redux-devtools-extension": "^2.13.2",
+        "@types/redux-logger": "^3.0.8",
+        "@types/redux-mock-store": "^1.0.2",
+        "@types/redux-thunk": "^2.1.0",
+        "@types/reselect": "^2.2.0",
+        "@types/rimraf": "^3.0.0",
+        "@types/stylelint": "^9.10.1",
+        "@types/terser-webpack-plugin": "^5.0.2",
+        "@types/typescript": "^2.0.0",
+        "@types/webpack": "^4.41.25",
+        "@types/webpack-bundle-analyzer": "^3.9.0",
+        "@types/webpack-dev-server": "^3.11.1",
+        "@types/webpack-env": "^1.16.0",
+        "@types/webpack-merge": "^4.1.5",
+        "@typescript-eslint/eslint-plugin": "^4.12.0",
+        "@typescript-eslint/parser": "^4.12.0",
+        "autoprefixer": "^10.1.0",
+        "babel-jest": "^26.6.3",
+        "babel-loader": "^8.2.2",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "chalk": "^4.1.0",
+        "circular-dependency-plugin": "^5.2.2",
+        "cross-env": "^7.0.3",
+        "css-loader": "^5.0.1",
+        "css-minimizer-webpack-plugin": "^1.1.5",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
+        "enzyme-to-json": "^3.6.1",
+        "eslint": "^7.17.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^7.1.0",
+        "eslint-import-resolver-babel-module": "^5.2.0",
+        "eslint-import-resolver-typescript": "^2.3.0",
+        "eslint-plugin-html": "^6.1.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "4.2.0",
+        "eventsource-polyfill": "^0.9.6",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^4.5.1",
+        "http-server": "^0.12.3",
+        "husky": "^4.3.6",
+        "immutable": "^4.0.0-rc.12",
+        "jest": "^26.6.3",
+        "jest-cli": "^26.6.3",
+        "jsdom": "^16.4.0",
+        "mini-css-extract-plugin": "^1.3.3",
+        "node-sass": "^5.0.0",
+        "postcss": "^8.2.2",
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-html": "^0.36.0",
+        "postcss-loader": "^4.1.0",
+        "prettier": "^2.2.1",
+        "prettier-eslint": "^12.0.0",
+        "prettier-stylelint": "^0.4.2",
+        "react-hot-loader": "^4.13.0",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-logger": "^3.0.6",
+        "redux-mock-store": "^1.5.4",
+        "rimraf": "^3.0.2",
+        "sass-loader": "^10.1.0",
+        "seamless-immutable": "^7.1.4",
+        "style-loader": "^2.0.0",
+        "stylelint": "^13.8.0",
+        "stylelint-config-prettier": "^8.0.2",
+        "stylelint-config-recommended": "^3.0.0",
+        "stylelint-config-recommended-scss": "^4.2.0",
+        "stylelint-scss": "^3.18.0",
+        "terser-webpack-plugin": "^5.0.3",
+        "typescript": "^4.1.3",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.11.1",
+        "webpack-bundle-analyzer": "^4.3.0",
+        "webpack-cli": "^4.3.1",
+        "webpack-dev-server": "^4.0.0-beta.0",
+        "webpack-merge": "^5.7.3"
+    },
     "jest": {
         "collectCoverageFrom": [
             "<rootDir>/src/**/*{js,jsx,ts,tsx}"
@@ -189,11 +203,5 @@
             "enzyme-to-json/serializer"
         ],
         "testEnvironment": "jsdom"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run tsc && npm run lint",
-            "pre-push": "npm test"
-        }
     }
 }
