migrated to react-refresh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "jvitor",
         "kohler",
         "msjsdiag",
+        "pmmmwh",
         "sourcemap",
         "streetsidesoftware",
         "teamsupercell"
