--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "open:dist": "http-server dist --port 4000  --proxy http://localhost:4000?",
-        "open:src": "cross-env PORT=3000 webpack-dev-server --hot --config config/webpack/webpack.dev.babel.ts",
+        "open:src": "cross-env PORT=3000 webpack-dev-server --config config/webpack/webpack.dev.babel.ts",
         "tsc": "tsc",
         "test": "cross-env NODE_ENV=test jest",
         "test:update": "npm run test -- --update",
@@ -40,7 +40,7 @@
     "browserslist": [
         "> 0.5%",
         "not dead",
-        "not IE < 11",
+        "not IE > 0",
         "not op_mini all"
     ],
     "engines": {
@@ -56,8 +56,8 @@
         "history": "^5.0.0",
         "normalize.css": "^8.0.1",
         "npm": "^6.14.10",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-helmet-async": "^1.0.7",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
@@ -73,7 +73,7 @@
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
-        "@hot-loader/react-dom": "17.0.1",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
         "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
         "@types/autoprefixer": "^9.7.2",
         "@types/axios": "^0.14.0",
@@ -100,7 +100,6 @@
         "@types/prettier": "^2.1.6",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "@types/react-hot-loader": "^4.1.1",
         "@types/react-redux": "^7.1.15",
         "@types/react-router": "^5.1.9",
         "@types/react-router-dom": "^5.1.7",
@@ -163,7 +162,7 @@
         "prettier": "^2.2.1",
         "prettier-eslint": "^12.0.0",
         "prettier-stylelint": "^0.4.2",
-        "react-hot-loader": "^4.13.0",
+        "react-refresh": "^0.9.0",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
