--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "pmmmwh",
         "sourcemap",
         "streetsidesoftware",
-        "teamsupercell"
+        "teamsupercell",
+        "wojtekmaj"
     ]
 }
