simplified webpack configuration; some errors are no longer omitted

--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development npm run open:src",
         "prebuild": "npm run lint && npm run tsc && npm test && npm run cleanDist",
-        "build": "cross-env NODE_ENV=production babel-node config/build --extensions '.ts'",
-        "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true babel-node config/build --extensions '.ts'",
-        "build:skip": "npm run cleanDist && cross-env NODE_ENV=production babel-node config/build --extensions '.ts'",
+        "build": "cross-env NODE_ENV=production babel-node webpack --config config/webpack/webpack.prod.babel.ts",
+        "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true webpack --config config/webpack/webpack.prod.babel.ts",
+        "build:skip": "npm run cleanDist && cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
         "cleanDist": "rimraf ./dist && mkdir dist",
         "eslint": "eslint src config --ext js,jsx,ts,tsx",
         "eslint:fix": "eslint src config --ext js,jsx,ts,tsx --fix",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "open:dist": "http-server dist --port 4000 --proxy http://localhost:4000?",
-        "open:src": "cross-env PORT=3000 webpack-dev-server --config config/webpack/webpack.dev.babel.ts",
+        "open:src": "cross-env PORT=3000 webpack serve --config config/webpack/webpack.dev.babel.ts",
         "postinstall": "husky install",
         "tsc": "tsc",
         "test": "cross-env NODE_ENV=test jest",
