--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "reactplate",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
     "description": "React, Redux, Jest & 🔥 reload | TypeScript parsed with Babel 7 | ESLint + @typescript-eslint",
@@ -15,7 +15,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=development npm run open:src",
         "prebuild": "npm run lint && npm run tsc && npm test && npm run cleanDist",
-        "build": "cross-env NODE_ENV=production babel-node webpack --config config/webpack/webpack.prod.babel.ts",
+        "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
         "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true webpack --config config/webpack/webpack.prod.babel.ts",
         "build:skip": "npm run cleanDist && cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
         "cleanDist": "rimraf ./dist && mkdir dist",
@@ -42,18 +42,18 @@
         "node": ">=9"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.13.1",
+        "@babel/runtime-corejs3": "^7.13.10",
         "axios": "^0.21.1",
         "connected-react-router": "^6.9.1",
-        "core-js": "^3.9.0",
-        "date-fns": "^2.17.0",
+        "core-js": "^3.10.1",
+        "date-fns": "^2.20.0",
         "history": "^4.10.1",
         "normalize.css": "^8.0.1",
-        "npm": "^7.5.6",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-helmet-async": "^1.0.7",
-        "react-redux": "^7.2.2",
+        "npm": "^7.9.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-helmet-async": "^1.0.9",
+        "react-redux": "^7.2.3",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
@@ -61,107 +61,107 @@
         "reselect": "^4.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.1",
-        "@babel/node": "^7.13.0",
+        "@babel/core": "^7.13.15",
+        "@babel/node": "^7.13.13",
         "@babel/plugin-proposal-class-properties": "^7.13.0",
-        "@babel/preset-env": "^7.13.0",
-        "@babel/preset-react": "^7.12.13",
+        "@babel/preset-env": "^7.13.15",
+        "@babel/preset-react": "^7.13.13",
         "@babel/preset-typescript": "^7.13.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-        "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
-        "@types/circular-dependency-plugin": "^5.0.1",
+        "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
+        "@types/circular-dependency-plugin": "^5.0.2",
         "@types/core-js": "^2.5.4",
-        "@types/css-minimizer-webpack-plugin": "^1.1.1",
+        "@types/css-minimizer-webpack-plugin": "^1.1.3",
         "@types/enzyme": "^3.10.8",
         "@types/enzyme-to-json": "^1.5.4",
-        "@types/eslint": "^7.2.6",
+        "@types/eslint": "^7.2.8",
         "@types/eslint-plugin-prettier": "^3.1.0",
         "@types/history": "^4.7.8",
-        "@types/html-webpack-plugin": "^3.2.4",
+        "@types/html-webpack-plugin": "^3.2.5",
         "@types/http-server": "^0.10.1",
-        "@types/jest": "^26.0.20",
-        "@types/jsdom": "^16.2.6",
-        "@types/mini-css-extract-plugin": "^1.2.2",
-        "@types/node": "^14.14.31",
+        "@types/jest": "^26.0.22",
+        "@types/jsdom": "^16.2.10",
+        "@types/mini-css-extract-plugin": "^1.4.1",
+        "@types/node": "^14.14.37",
         "@types/node-sass": "^4.11.1",
         "@types/npm": "^2.0.31",
-        "@types/prettier": "^2.2.1",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1",
+        "@types/prettier": "^2.2.3",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.3",
         "@types/react-redux": "^7.1.16",
-        "@types/react-router": "^5.1.11",
+        "@types/react-router": "^5.1.13",
         "@types/react-router-dom": "^5.1.7",
         "@types/redux-logger": "^3.0.8",
         "@types/redux-mock-store": "^1.0.2",
         "@types/rimraf": "^3.0.0",
         "@types/stylelint": "^9.10.1",
-        "@types/webpack": "^4.41.26",
-        "@types/webpack-bundle-analyzer": "^3.9.1",
-        "@types/webpack-dev-server": "^3.11.1",
+        "@types/webpack": "^5.28.0",
+        "@types/webpack-bundle-analyzer": "^3.9.2",
+        "@types/webpack-dev-server": "^3.11.3",
         "@types/webpack-env": "^1.16.0",
-        "@types/webpack-merge": "^4.1.5",
-        "@typescript-eslint/eslint-plugin": "^4.15.2",
-        "@typescript-eslint/parser": "^4.15.2",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-        "autoprefixer": "^10.2.4",
+        "@types/webpack-merge": "^5.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.21.0",
+        "@typescript-eslint/parser": "^4.21.0",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+        "autoprefixer": "^10.2.5",
         "babel-jest": "^26.6.3",
         "babel-loader": "^8.2.2",
         "babel-plugin-module-resolver": "^4.1.0",
         "chalk": "^4.1.0",
         "circular-dependency-plugin": "^5.2.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^5.0.2",
-        "css-minimizer-webpack-plugin": "^1.2.0",
+        "css-loader": "^5.2.0",
+        "css-minimizer-webpack-plugin": "^1.3.0",
         "enzyme": "^3.11.0",
-        "enzyme-to-json": "^3.6.1",
-        "eslint": "^7.20.0",
+        "enzyme-to-json": "^3.6.2",
+        "eslint": "^7.23.0",
         "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-prettier": "^8.0.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-import-resolver-babel-module": "^5.2.0",
         "eslint-import-resolver-typescript": "^2.4.0",
-        "eslint-plugin-html": "^6.1.1",
+        "eslint-plugin-html": "^6.1.2",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.1.5",
+        "eslint-plugin-jest": "^24.3.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "4.2.0",
         "eventsource-polyfill": "^0.9.6",
         "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.2.0",
+        "html-webpack-plugin": "^5.3.1",
         "http-server": "^0.12.3",
-        "husky": "^5.1.1",
+        "husky": "^6.0.0",
         "immutable": "^4.0.0-rc.12",
         "jest": "^26.6.3",
         "jest-cli": "^26.6.3",
-        "jsdom": "^16.4.0",
-        "mini-css-extract-plugin": "^1.3.8",
+        "jsdom": "^16.5.2",
+        "mini-css-extract-plugin": "^1.4.1",
         "node-sass": "^5.0.0",
-        "postcss": "^8.2.6",
+        "postcss": "^8.2.9",
         "postcss-flexbugs-fixes": "^5.0.2",
         "postcss-html": "^0.36.0",
-        "postcss-loader": "^5.0.0",
+        "postcss-loader": "^5.2.0",
         "prettier": "^2.2.1",
         "prettier-eslint": "^12.0.0",
         "prettier-stylelint": "^0.4.2",
-        "react-refresh": "^0.9.0",
-        "redux-devtools-extension": "^2.13.8",
+        "react-refresh": "^0.10.0",
+        "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "rimraf": "^3.0.2",
         "sass-loader": "^11.0.1",
         "seamless-immutable": "^7.1.4",
         "style-loader": "^2.0.0",
-        "stylelint": "^13.11.0",
+        "stylelint": "^13.12.0",
         "stylelint-config-prettier": "^8.0.2",
-        "stylelint-config-recommended": "^3.0.0",
+        "stylelint-config-recommended": "^4.0.0",
         "stylelint-config-recommended-scss": "^4.2.0",
         "stylelint-scss": "^3.19.0",
-        "typescript": "^4.1.5",
+        "typescript": "^4.2.4",
         "url-loader": "^4.1.1",
-        "webpack": "^5.24.0",
+        "webpack": "^5.31.0",
         "webpack-bundle-analyzer": "^4.4.0",
-        "webpack-cli": "^4.5.0",
+        "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^4.0.0-beta.0",
         "webpack-merge": "^5.7.3"
     },
