--- a/package.json
+++ b/package.json
@@ -39,131 +39,125 @@
         "not op_mini all"
     ],
     "engines": {
-        "node": ">=9"
+        "node": ">=12.17"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.14.0",
-        "axios": "^0.21.1",
-        "connected-react-router": "^6.9.1",
-        "core-js": "^3.13.1",
-        "date-fns": "^2.22.1",
-        "history": "^4.10.1",
+        "@babel/runtime-corejs3": "^7.16.7",
+        "axios": "^0.24.0",
+        "core-js": "^3.20.1",
+        "date-fns": "^2.28.0",
+        "history": "^5.2.0",
         "normalize.css": "^8.0.1",
-        "npm": "^7.16.0",
+        "npm": "^8.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-helmet-async": "^1.0.9",
-        "react-redux": "^7.2.4",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
-        "redux": "^4.1.0",
-        "redux-thunk": "^2.3.0",
-        "reselect": "^4.0.0"
+        "react-helmet-async": "^1.2.2",
+        "react-redux": "^7.2.6",
+        "react-router": "^6.2.1",
+        "react-router-dom": "^6.2.1",
+        "redux": "^4.1.2",
+        "redux-first-history": "^5.0.8",
+        "redux-thunk": "^2.4.1",
+        "reselect": "^4.1.5"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.3",
-        "@babel/node": "^7.14.2",
-        "@babel/plugin-proposal-class-properties": "^7.13.0",
-        "@babel/preset-env": "^7.14.4",
-        "@babel/preset-react": "^7.13.13",
-        "@babel/preset-typescript": "^7.13.0",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+        "@babel/core": "^7.16.7",
+        "@babel/node": "^7.16.7",
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@babel/preset-env": "^7.16.7",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
-        "@types/circular-dependency-plugin": "^5.0.2",
-        "@types/core-js": "^2.5.4",
-        "@types/css-minimizer-webpack-plugin": "^3.0.0",
-        "@types/enzyme": "^3.10.8",
+        "@types/circular-dependency-plugin": "^5.0.5",
+        "@types/core-js": "^2.5.5",
+        "@types/enzyme": "^3.10.10",
         "@types/enzyme-to-json": "^1.5.4",
-        "@types/eslint": "^7.2.13",
+        "@types/eslint": "^8.2.1",
         "@types/eslint-plugin-prettier": "^3.1.0",
-        "@types/history": "^4.7.8",
-        "@types/html-webpack-plugin": "^3.2.5",
-        "@types/http-server": "^0.10.1",
-        "@types/jest": "^26.0.23",
-        "@types/jsdom": "^16.2.10",
-        "@types/mini-css-extract-plugin": "^1.4.3",
-        "@types/node": "^15.12.1",
-        "@types/node-sass": "^4.11.1",
-        "@types/npm": "^2.0.31",
-        "@types/prettier": "^2.2.3",
-        "@types/react": "^17.0.9",
-        "@types/react-dom": "^17.0.6",
-        "@types/react-redux": "^7.1.16",
-        "@types/react-router": "^5.1.14",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/redux-logger": "^3.0.8",
-        "@types/redux-mock-store": "^1.0.2",
-        "@types/rimraf": "^3.0.0",
-        "@types/stylelint": "^13.13.0",
+        "@types/history": "^4.7.9",
+        "@types/html-webpack-plugin": "^3.2.6",
+        "@types/http-server": "^0.12.1",
+        "@types/jest": "^27.4.0",
+        "@types/jsdom": "^16.2.14",
+        "@types/mini-css-extract-plugin": "^2.4.0",
+        "@types/node": "^17.0.5",
+        "@types/npm": "^7.19.0",
+        "@types/prettier": "^2.4.2",
+        "@types/react": "^17.0.38",
+        "@types/react-dom": "^17.0.11",
+        "@types/react-redux": "^7.1.21",
+        "@types/react-router": "^5.1.17",
+        "@types/react-router-dom": "^5.3.2",
+        "@types/redux-logger": "^3.0.9",
+        "@types/redux-mock-store": "^1.0.3",
+        "@types/rimraf": "^3.0.2",
+        "@types/sass": "^1.43.1",
         "@types/webpack": "^5.28.0",
-        "@types/webpack-bundle-analyzer": "^4.4.0",
-        "@types/webpack-dev-server": "^3.11.4",
-        "@types/webpack-env": "^1.16.0",
-        "@types/webpack-merge": "^5.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.26.0",
-        "@typescript-eslint/parser": "^4.26.0",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-        "autoprefixer": "^10.2.6",
-        "babel-jest": "^27.0.2",
-        "babel-loader": "^8.2.2",
+        "@types/webpack-bundle-analyzer": "^4.4.1",
+        "@types/webpack-dev-server": "^4.5.0",
+        "@types/webpack-env": "^1.16.3",
+        "@typescript-eslint/eslint-plugin": "^5.8.1",
+        "@typescript-eslint/parser": "^5.8.1",
+        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+        "autoprefixer": "^10.4.1",
+        "babel-jest": "^27.4.5",
+        "babel-loader": "^8.2.3",
         "babel-plugin-module-resolver": "^4.1.0",
-        "chalk": "^4.1.1",
         "circular-dependency-plugin": "^5.2.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^5.2.6",
-        "css-minimizer-webpack-plugin": "^3.0.1",
+        "css-loader": "^6.5.1",
+        "css-minimizer-webpack-plugin": "^3.3.1",
         "enzyme": "^3.11.0",
         "enzyme-to-json": "^3.6.2",
-        "eslint": "^7.28.0",
-        "eslint-config-airbnb": "^18.2.1",
+        "eslint": "^8.5.0",
+        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.3.0",
         "eslint-import-resolver-babel-module": "^5.3.1",
-        "eslint-import-resolver-typescript": "^2.4.0",
-        "eslint-plugin-html": "^6.1.2",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jest": "^24.3.6",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
-        "eslint-plugin-react-hooks": "4.2.0",
-        "eventsource-polyfill": "^0.9.6",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-html": "^6.2.0",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jest": "^25.3.3",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "4.3.0",
         "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.3.1",
-        "http-server": "^0.12.3",
-        "husky": "^6.0.0",
-        "immutable": "^4.0.0-rc.12",
-        "jest": "^27.0.4",
-        "jest-cli": "^27.0.4",
-        "jsdom": "^16.6.0",
-        "mini-css-extract-plugin": "^1.6.0",
-        "node-sass": "^6.0.0",
-        "postcss": "^8.3.0",
+        "html-webpack-plugin": "^5.5.0",
+        "http-server": "^14.0.0",
+        "husky": "^7.0.4",
+        "immutable": "^4.0.0",
+        "jest": "^27.4.5",
+        "jest-cli": "^27.4.5",
+        "jsdom": "^19.0.0",
+        "mini-css-extract-plugin": "^2.4.5",
+        "postcss": "^8.4.5",
         "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-html": "^0.36.0",
-        "postcss-loader": "^5.3.0",
-        "prettier": "^2.3.0",
-        "prettier-eslint": "^12.0.0",
+        "postcss-html": "^1.3.0",
+        "postcss-loader": "^6.2.1",
+        "prettier": "^2.5.1",
+        "prettier-eslint": "^13.0.0",
         "prettier-stylelint": "^0.4.2",
-        "react-refresh": "^0.10.0",
+        "react-refresh": "^0.11.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "rimraf": "^3.0.2",
-        "sass-loader": "^12.0.0",
-        "seamless-immutable": "^7.1.4",
-        "style-loader": "^2.0.0",
-        "stylelint": "^13.13.1",
-        "stylelint-config-prettier": "^8.0.2",
-        "stylelint-config-recommended": "^5.0.0",
-        "stylelint-config-recommended-scss": "^4.2.0",
-        "stylelint-scss": "^3.19.0",
-        "typescript": "^4.3.2",
+        "sass": "^1.45.2",
+        "sass-loader": "^12.4.0",
+        "style-loader": "^3.3.1",
+        "stylelint": "^14.2.0",
+        "stylelint-config-prettier": "^9.0.3",
+        "stylelint-config-recommended": "^6.0.0",
+        "stylelint-config-recommended-scss": "^5.0.2",
+        "stylelint-scss": "^4.1.0",
+        "typescript": "^4.5.4",
         "url-loader": "^4.1.1",
-        "webpack": "^5.38.1",
-        "webpack-bundle-analyzer": "^4.4.2",
-        "webpack-cli": "^4.7.0",
-        "webpack-dev-server": "^4.0.0-beta.2",
-        "webpack-merge": "^5.7.3"
+        "webpack": "^5.65.0",
+        "webpack-bundle-analyzer": "^4.5.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.7.2",
+        "webpack-merge": "^5.8.0"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -173,11 +167,11 @@
             "<rootDir>/src/index.tsx"
         ],
         "setupFilesAfterEnv": [
-            "<rootDir>/config/enzymeSetup.js"
+            "<rootDir>/config/enzymeSetup.ts"
         ],
         "moduleNameMapper": {
-            "\\.(jpg|jpeg|png|gif|ico|woff|woff2|svg|ttf|eot)$": "<rootDir>/config/assetsTransformer.js",
-            "^.+\\.(css|scss)$": "<rootDir>/config/assetsTransformer.js"
+            "\\.(jpg|jpeg|png|gif|ico|woff|woff2|svg|ttf|eot)$": "<rootDir>/config/assetsTransformer.ts",
+            "^.+\\.(css|scss)$": "<rootDir>/config/assetsTransformer.ts"
         },
         "snapshotSerializers": [
             "enzyme-to-json/serializer"
