updated React to v18 and other packages; migrated from enzyme to React Testing Library

--- a/package.json
+++ b/package.json
@@ -42,119 +42,114 @@
         "node": ">=12.17"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.16.7",
-        "axios": "^0.24.0",
-        "core-js": "^3.20.1",
+        "@babel/runtime-corejs3": "^7.17.9",
+        "axios": "^0.26.1",
+        "core-js": "^3.22.0",
         "date-fns": "^2.28.0",
-        "history": "^5.2.0",
+        "history": "^5.3.0",
         "normalize.css": "^8.0.1",
-        "npm": "^8.3.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-helmet-async": "^1.2.2",
-        "react-redux": "^7.2.6",
-        "react-router": "^6.2.1",
-        "react-router-dom": "^6.2.1",
-        "redux": "^4.1.2",
-        "redux-first-history": "^5.0.8",
+        "npm": "^8.7.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-helmet-async": "^1.3.0",
+        "react-redux": "^8.0.0",
+        "react-router": "^6.3.0",
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.2.0",
+        "redux-first-history": "^5.0.9",
         "redux-thunk": "^2.4.1",
         "reselect": "^4.1.5"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.7",
-        "@babel/node": "^7.16.7",
+        "@babel/core": "^7.17.9",
+        "@babel/node": "^7.16.8",
         "@babel/plugin-proposal-class-properties": "^7.16.7",
-        "@babel/preset-env": "^7.16.7",
+        "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
         "@types/circular-dependency-plugin": "^5.0.5",
         "@types/core-js": "^2.5.5",
-        "@types/enzyme": "^3.10.10",
-        "@types/enzyme-to-json": "^1.5.4",
-        "@types/eslint": "^8.2.1",
+        "@types/eslint": "^8.4.1",
         "@types/eslint-plugin-prettier": "^3.1.0",
-        "@types/history": "^4.7.9",
+        "@types/history": "^4.7.11",
         "@types/html-webpack-plugin": "^3.2.6",
         "@types/http-server": "^0.12.1",
-        "@types/jest": "^27.4.0",
+        "@types/jest": "^27.4.1",
         "@types/jsdom": "^16.2.14",
-        "@types/mini-css-extract-plugin": "^2.4.0",
-        "@types/node": "^17.0.5",
+        "@types/mini-css-extract-plugin": "^2.5.0",
+        "@types/node": "^17.0.25",
         "@types/npm": "^7.19.0",
-        "@types/prettier": "^2.4.2",
-        "@types/react": "^17.0.38",
-        "@types/react-dom": "^17.0.11",
-        "@types/react-redux": "^7.1.21",
-        "@types/react-router": "^5.1.17",
-        "@types/react-router-dom": "^5.3.2",
+        "@types/prettier": "^2.6.0",
+        "@types/react": "^18.0.5",
+        "@types/react-dom": "^18.0.1",
+        "@types/react-redux": "^7.1.24",
+        "@types/react-router": "^5.1.18",
+        "@types/react-router-dom": "^5.3.3",
         "@types/redux-logger": "^3.0.9",
         "@types/redux-mock-store": "^1.0.3",
         "@types/rimraf": "^3.0.2",
         "@types/sass": "^1.43.1",
-        "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
-        "@types/webpack-dev-server": "^4.5.0",
-        "@types/webpack-env": "^1.16.3",
-        "@typescript-eslint/eslint-plugin": "^5.8.1",
-        "@typescript-eslint/parser": "^5.8.1",
-        "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
-        "autoprefixer": "^10.4.1",
-        "babel-jest": "^27.4.5",
-        "babel-loader": "^8.2.3",
+        "@types/webpack-env": "^1.16.4",
+        "@typescript-eslint/eslint-plugin": "^5.20.0",
+        "@typescript-eslint/parser": "^5.20.0",
+        "autoprefixer": "^10.4.4",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.4",
         "babel-plugin-module-resolver": "^4.1.0",
         "circular-dependency-plugin": "^5.2.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.5.1",
-        "css-minimizer-webpack-plugin": "^3.3.1",
-        "enzyme": "^3.11.0",
-        "enzyme-to-json": "^3.6.2",
-        "eslint": "^8.5.0",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^3.4.1",
+        "eslint": "^8.13.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^8.3.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-babel-module": "^5.3.1",
-        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-import-resolver-typescript": "^2.7.1",
         "eslint-plugin-html": "^6.2.0",
-        "eslint-plugin-import": "^2.25.3",
-        "eslint-plugin-jest": "^25.3.3",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jest": "^26.1.4",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "4.3.0",
+        "eslint-plugin-react": "^7.29.4",
+        "eslint-plugin-react-hooks": "4.4.0",
         "html-webpack-plugin": "^5.5.0",
-        "http-server": "^14.0.0",
+        "http-server": "^14.1.0",
         "husky": "^7.0.4",
         "immutable": "^4.0.0",
-        "jest": "^27.4.5",
-        "jest-cli": "^27.4.5",
+        "jest": "^27.5.1",
+        "jest-cli": "^27.5.1",
         "jsdom": "^19.0.0",
-        "mini-css-extract-plugin": "^2.4.5",
-        "postcss": "^8.4.5",
+        "mini-css-extract-plugin": "^2.6.0",
+        "postcss": "^8.4.12",
         "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-html": "^1.3.0",
+        "postcss-html": "^1.4.1",
         "postcss-loader": "^6.2.1",
-        "prettier": "^2.5.1",
+        "prettier": "^2.6.2",
         "prettier-eslint": "^13.0.0",
         "prettier-stylelint": "^0.4.2",
-        "react-refresh": "^0.11.0",
+        "react-refresh": "^0.12.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "rimraf": "^3.0.2",
-        "sass": "^1.45.2",
-        "sass-loader": "^12.4.0",
+        "sass": "^1.50.1",
+        "sass-loader": "^12.6.0",
         "style-loader": "^3.3.1",
-        "stylelint": "^14.2.0",
+        "stylelint": "^14.7.1",
         "stylelint-config-prettier": "^9.0.3",
-        "stylelint-config-recommended": "^6.0.0",
-        "stylelint-config-recommended-scss": "^5.0.2",
-        "stylelint-scss": "^4.1.0",
-        "typescript": "^4.5.4",
-        "webpack": "^5.65.0",
+        "stylelint-config-recommended": "^7.0.0",
+        "stylelint-config-recommended-scss": "^6.0.0",
+        "stylelint-scss": "^4.2.0",
+        "typescript": "^4.6.3",
+        "webpack": "^5.72.0",
         "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^4.9.1",
-        "webpack-dev-server": "^4.7.2",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.8.1",
         "webpack-merge": "^5.8.0"
     },
     "jest": {
@@ -165,15 +160,12 @@
             "<rootDir>/src/index.tsx"
         ],
         "setupFilesAfterEnv": [
-            "<rootDir>/config/enzymeSetup.ts"
+            "<rootDir>/config/testSetup.ts"
         ],
         "moduleNameMapper": {
             "\\.(jpg|jpeg|png|gif|ico|woff|woff2|svg|ttf|eot)$": "<rootDir>/config/assetsTransformer.ts",
             "^.+\\.(css|scss)$": "<rootDir>/config/assetsTransformer.ts"
         },
-        "snapshotSerializers": [
-            "enzyme-to-json/serializer"
-        ],
         "testEnvironment": "jsdom"
     }
 }
