covering more files with eslint; removed redundant types package

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true webpack --config config/webpack/webpack.prod.babel.ts",
         "build:skip": "npm run cleanDist && cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
         "cleanDist": "rimraf ./dist && mkdir dist",
-        "eslint": "eslint src config --ext js,jsx,ts,tsx",
-        "eslint:fix": "eslint src config --ext js,jsx,ts,tsx --fix",
+        "eslint": "eslint . --ext js,jsx,ts,tsx",
+        "eslint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "open:dist": "http-server dist --port 4000 --proxy http://localhost:4000?",
@@ -91,7 +91,6 @@
         "@types/react-router-dom": "^5.3.3",
         "@types/redux-logger": "^3.0.9",
         "@types/redux-mock-store": "^1.0.3",
-        "@types/rimraf": "^3.0.2",
         "@types/sass": "^1.43.1",
         "@types/webpack-bundle-analyzer": "^4.4.1",
         "@types/webpack-env": "^1.16.4",
