packages update, typings fixes, formatting and linting settings fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,9 @@
     "[html]": {
         "editor.defaultFormatter": "vscode.html-language-features"
     },
+    "[scss]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "prettier.htmlWhitespaceSensitivity": "ignore",
     "eslint.validate": [
         "javascript",
