--- a/package.json
+++ b/package.json
@@ -42,50 +42,50 @@
         "node": ">=12.17"
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.17.9",
-        "axios": "^0.26.1",
-        "core-js": "^3.22.0",
+        "@babel/runtime-corejs3": "^7.18.6",
+        "axios": "^0.27.2",
+        "core-js": "^3.23.4",
         "date-fns": "^2.28.0",
         "history": "^5.3.0",
         "normalize.css": "^8.0.1",
-        "npm": "^8.7.0",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "npm": "^8.13.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-helmet-async": "^1.3.0",
-        "react-redux": "^8.0.0",
+        "react-redux": "^8.0.2",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
         "redux": "^4.2.0",
-        "redux-first-history": "^5.0.9",
+        "redux-first-history": "^5.0.12",
         "redux-thunk": "^2.4.1",
-        "reselect": "^4.1.5"
+        "reselect": "^4.1.6"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.9",
-        "@babel/node": "^7.16.8",
-        "@babel/plugin-proposal-class-properties": "^7.16.7",
-        "@babel/preset-env": "^7.16.11",
-        "@babel/preset-react": "^7.16.7",
-        "@babel/preset-typescript": "^7.16.7",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+        "@babel/core": "^7.18.6",
+        "@babel/node": "^7.18.6",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/preset-env": "^7.18.6",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+        "@redux-devtools/extension": "^3.2.2",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
         "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.1.1",
+        "@testing-library/react": "^13.3.0",
         "@types/circular-dependency-plugin": "^5.0.5",
         "@types/core-js": "^2.5.5",
-        "@types/eslint": "^8.4.1",
+        "@types/eslint": "^8.4.5",
         "@types/eslint-plugin-prettier": "^3.1.0",
         "@types/history": "^4.7.11",
         "@types/html-webpack-plugin": "^3.2.6",
         "@types/http-server": "^0.12.1",
-        "@types/jest": "^27.4.1",
+        "@types/jest": "^28.1.4",
         "@types/jsdom": "^16.2.14",
-        "@types/mini-css-extract-plugin": "^2.5.0",
-        "@types/node": "^17.0.25",
+        "@types/node": "^18.0.3",
         "@types/npm": "^7.19.0",
-        "@types/prettier": "^2.6.0",
-        "@types/react": "^18.0.5",
-        "@types/react-dom": "^18.0.1",
+        "@types/prettier": "^2.6.3",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
         "@types/react-redux": "^7.1.24",
         "@types/react-router": "^5.1.18",
         "@types/react-router-dom": "^5.3.3",
@@ -93,62 +93,62 @@
         "@types/redux-mock-store": "^1.0.3",
         "@types/sass": "^1.43.1",
         "@types/webpack-bundle-analyzer": "^4.4.1",
-        "@types/webpack-env": "^1.16.4",
-        "@typescript-eslint/eslint-plugin": "^5.20.0",
-        "@typescript-eslint/parser": "^5.20.0",
-        "autoprefixer": "^10.4.4",
-        "babel-jest": "^27.5.1",
-        "babel-loader": "^8.2.4",
+        "@types/webpack-env": "^1.17.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.6",
+        "@typescript-eslint/parser": "^5.30.6",
+        "autoprefixer": "^10.4.7",
+        "babel-jest": "^28.1.2",
+        "babel-loader": "^8.2.5",
         "babel-plugin-module-resolver": "^4.1.0",
         "circular-dependency-plugin": "^5.2.2",
         "cross-env": "^7.0.3",
         "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^3.4.1",
-        "eslint": "^8.13.0",
+        "css-minimizer-webpack-plugin": "^4.0.0",
+        "eslint": "^8.19.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-babel-module": "^5.3.1",
-        "eslint-import-resolver-typescript": "^2.7.1",
+        "eslint-import-resolver-typescript": "^3.2.5",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jest": "^26.1.4",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.29.4",
-        "eslint-plugin-react-hooks": "4.4.0",
+        "eslint-plugin-jest": "^26.5.3",
+        "eslint-plugin-jsx-a11y": "^6.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "4.6.0",
         "html-webpack-plugin": "^5.5.0",
-        "http-server": "^14.1.0",
-        "husky": "^7.0.4",
-        "immutable": "^4.0.0",
-        "jest": "^27.5.1",
-        "jest-cli": "^27.5.1",
-        "jsdom": "^19.0.0",
-        "mini-css-extract-plugin": "^2.6.0",
-        "postcss": "^8.4.12",
+        "http-server": "^14.1.1",
+        "husky": "^8.0.1",
+        "immutable": "^4.1.0",
+        "jest": "^28.1.2",
+        "jest-cli": "^28.1.2",
+        "jest-environment-jsdom": "^28.1.2",
+        "jsdom": "^20.0.0",
+        "mini-css-extract-plugin": "^2.6.1",
+        "postcss": "^8.4.14",
         "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-html": "^1.4.1",
-        "postcss-loader": "^6.2.1",
-        "prettier": "^2.6.2",
-        "prettier-eslint": "^13.0.0",
+        "postcss-html": "^1.5.0",
+        "postcss-loader": "^7.0.1",
+        "prettier": "^2.7.1",
+        "prettier-eslint": "^15.0.1",
         "prettier-stylelint": "^0.4.2",
-        "react-refresh": "^0.12.0",
-        "redux-devtools-extension": "^2.13.9",
+        "react-refresh": "^0.14.0",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "rimraf": "^3.0.2",
-        "sass": "^1.50.1",
-        "sass-loader": "^12.6.0",
+        "sass": "^1.53.0",
+        "sass-loader": "^13.0.2",
         "style-loader": "^3.3.1",
-        "stylelint": "^14.7.1",
+        "stylelint": "^14.9.1",
         "stylelint-config-prettier": "^9.0.3",
-        "stylelint-config-recommended": "^7.0.0",
-        "stylelint-config-recommended-scss": "^6.0.0",
-        "stylelint-scss": "^4.2.0",
-        "typescript": "^4.6.3",
-        "webpack": "^5.72.0",
+        "stylelint-config-recommended": "^8.0.0",
+        "stylelint-config-recommended-scss": "^7.0.0",
+        "stylelint-scss": "^4.3.0",
+        "typescript": "^4.7.4",
+        "webpack": "^5.73.0",
         "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.8.1",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.9.3",
         "webpack-merge": "^5.8.0"
     },
     "jest": {
