available over LAN

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "@types/history": "^4.7.11",
         "@types/html-webpack-plugin": "^3.2.6",
         "@types/http-server": "^0.12.1",
+        "@types/ip": "^1.1.0",
         "@types/jest": "^28.1.4",
         "@types/jsdom": "^16.2.14",
         "@types/node": "^18.0.3",
@@ -120,6 +121,7 @@
         "http-server": "^14.1.1",
         "husky": "^8.0.1",
         "immutable": "^4.1.0",
+        "ip": "^1.1.8",
         "jest": "^28.1.2",
         "jest-cli": "^28.1.2",
         "jest-environment-jsdom": "^28.1.2",
