--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs": true,
+    "files.eol": "\n",
 
     "css.validate": false,
     "scss.validate": false,
