--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
     "cSpell.words": [
         "asvetliakov",
         "autoinstaller",
+        "camelcase",
         "coenraad",
         "dbaeumer",
         "eamodio",
