--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.21.0",
+        "@sentry/react": "^7.45.0",
+        "@sentry/tracing": "^7.45.0",
         "axios": "^1.3.4",
         "core-js": "^3.29.1",
         "date-fns": "^2.29.3",
@@ -82,10 +84,10 @@
         "@types/ip": "^1.1.0",
         "@types/jest": "^29.5.0",
         "@types/jsdom": "^21.1.1",
-        "@types/node": "^18.15.5",
+        "@types/node": "^18.15.10",
         "@types/npm": "^7.19.0",
         "@types/prettier": "^2.7.2",
-        "@types/react": "^18.0.28",
+        "@types/react": "^18.0.30",
         "@types/react-dom": "^18.0.11",
         "@types/react-redux": "^7.1.25",
         "@types/react-router": "^5.1.20",
@@ -95,8 +97,8 @@
         "@types/sass": "^1.43.1",
         "@types/webpack-bundle-analyzer": "^4.6.0",
         "@types/webpack-env": "^1.18.0",
-        "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "@typescript-eslint/parser": "^5.56.0",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "@typescript-eslint/parser": "^5.57.0",
         "autoprefixer": "^10.4.14",
         "babel-jest": "^29.5.0",
         "babel-loader": "^9.1.2",
@@ -131,20 +133,20 @@
         "postcss-flexbugs-fixes": "^5.0.2",
         "postcss-html": "^1.5.0",
         "postcss-loader": "^7.1.0",
-        "prettier": "^2.8.6",
+        "prettier": "^2.8.7",
         "prettier-eslint": "^15.0.1",
         "prettier-stylelint": "^0.4.2",
         "react-refresh": "^0.14.0",
         "redux-logger": "^3.0.6",
         "redux-mock-store": "^1.5.4",
         "rimraf": "^4.4.1",
-        "sass": "^1.59.3",
-        "sass-loader": "^13.2.1",
+        "sass": "^1.60.0",
+        "sass-loader": "^13.2.2",
         "style-loader": "^3.3.2",
         "stylelint": "^15.3.0",
         "stylelint-config-recommended": "^11.0.0",
         "stylelint-config-recommended-scss": "^9.0.1",
-        "stylelint-scss": "^4.5.0",
+        "stylelint-scss": "^4.6.0",
         "typescript": "^5.0.2",
         "webpack": "^5.76.3",
         "webpack-bundle-analyzer": "^4.8.0",
