--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "open:src": "cross-env PORT=3000 webpack serve --config config/webpack/webpack.dev.babel.ts",
         "postinstall": "husky install",
         "tsc": "tsc",
+        "temp": "ts-node temp/script",
         "test": "cross-env NODE_ENV=test jest",
         "test:update": "npm run test -- --update",
         "test:coverage": "npm run test -- --coverage",
