--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.3",
     "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
-    "description": "React, Redux, Jest & 🔥 reload | TypeScript parsed with Babel 7 | ESLint + @typescript-eslint",
+    "description": "Flat ESLint | React, Redux, Jest & 🔥 reload | TypeScript parsed with Babel 7",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tenemo/reactplate.git"
@@ -19,8 +19,8 @@
         "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true webpack --config config/webpack/webpack.prod.babel.ts",
         "build:skip": "npm run cleanDist && cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
         "cleanDist": "rimraf ./dist && mkdir dist",
-        "eslint": "eslint . --ext js,jsx,ts,tsx",
-        "eslint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
+        "eslint": "eslint . -c eslint.config.js",
+        "eslint:fix": "eslint . --fix -c eslint.config.js",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "open:dist": "http-server dist --port 4000 --proxy http://localhost:4000?",
@@ -42,12 +42,13 @@
     "engines": {
         "node": ">=16.17.1"
     },
+    "type": "module",
     "dependencies": {
         "@babel/runtime-corejs3": "^7.23.2",
         "@sentry/react": "^7.76.0",
         "@sentry/tracing": "^7.76.0",
         "axios": "^1.6.0",
-        "core-js": "^3.33.1",
+        "core-js": "^3.33.2",
         "date-fns": "^2.30.0",
         "history": "^5.3.0",
         "normalize.css": "^8.0.1",
@@ -70,6 +71,10 @@
         "@babel/preset-env": "^7.23.2",
         "@babel/preset-react": "^7.22.15",
         "@babel/preset-typescript": "^7.23.2",
+        "@eslint/eslintrc": "^2.1.2",
+        "@eslint/js": "^8.52.0",
+        "@html-eslint/eslint-plugin": "^0.20.0",
+        "@html-eslint/parser": "^0.20.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@redux-devtools/extension": "^3.2.5",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
@@ -83,7 +88,7 @@
         "@types/html-webpack-plugin": "^3.2.8",
         "@types/http-server": "^0.12.3",
         "@types/ip": "^1.1.2",
-        "@types/jest": "^29.5.6",
+        "@types/jest": "^29.5.7",
         "@types/jsdom": "^21.1.4",
         "@types/node": "^20.8.9",
         "@types/npm": "^7.19.2",
@@ -98,8 +103,8 @@
         "@types/sass": "^1.43.1",
         "@types/webpack-bundle-analyzer": "^4.6.2",
         "@types/webpack-env": "^1.18.3",
-        "@typescript-eslint/eslint-plugin": "^6.9.0",
-        "@typescript-eslint/parser": "^6.9.0",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
         "autoprefixer": "^10.4.16",
         "babel-jest": "^29.7.0",
         "babel-loader": "^9.1.3",
@@ -109,9 +114,7 @@
         "css-loader": "^6.8.1",
         "css-minimizer-webpack-plugin": "^5.0.1",
         "eslint": "^8.52.0",
-        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.0.0",
-        "eslint-import-resolver-babel-module": "^5.3.2",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-html": "^7.1.0",
         "eslint-plugin-import": "^2.29.0",
@@ -120,6 +123,7 @@
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
+        "globals": "^13.23.0",
         "html-webpack-plugin": "^5.5.3",
         "http-server": "^14.1.1",
         "husky": "^8.0.3",
