--- a/package.json
+++ b/package.json
@@ -117,9 +117,11 @@
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-jest": "^27.6.0",
         "eslint-plugin-jsx-a11y": "^6.7.1",
+        "eslint-plugin-only-error": "^1.0.2",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-security": "^1.7.1",
         "globals": "^13.23.0",
         "html-webpack-plugin": "^5.5.3",
         "http-server": "^14.1.1",
