packages update, without redux (pending migration to RTK)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,9 @@
         "typescript",
         "typescriptreact"
     ],
-    "editor.codeActionsOnSave": { "source.fixAll.eslint": false },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "never"
+    },
 
     "workbench.iconTheme": "vscode-icons",
     "cSpell.ignorePaths": ["node_modules", ".git"],
