--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
         "css-minimizer-webpack-plugin": "^6.0.0",
         "eslint": "^8.56.0",
         "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-html": "^8.0.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jest": "27.6",
         "eslint-plugin-jsx-a11y": "^6.8.0",
