Redux Toolkit migration + space news example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,9 @@
         "kohler",
         "msjsdiag",
         "pmmmwh",
+        "reduxjs",
         "sourcemap",
+        "spaceflightnewsapi",
         "streetsidesoftware",
         "teamsupercell",
         "wojtekmaj"
