--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "reactplate",
-    "version": "1.0.3",
+    "version": "2.0.0",
     "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
-    "description": "Flat ESLint | React, Redux, Jest & 🔥 reload | TypeScript parsed with Babel 7",
+    "description": "Flat ESLint | React, Redux Toolkit, Jest & 🔥 reload | TypeScript parsed with Babel",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tenemo/reactplate.git"
@@ -45,39 +45,38 @@
     "type": "module",
     "dependencies": {
         "@babel/runtime-corejs3": "^7.23.9",
+        "@reduxjs/toolkit": "^2.1.0",
+        "@sentry/browser": "^7.100.1",
         "@sentry/react": "^7.100.1",
-        "@sentry/tracing": "^7.100.1",
-        "axios": "^1.6.7",
         "core-js": "^3.35.1",
         "date-fns": "^3.3.1",
         "history": "^5.3.0",
         "normalize.css": "^8.0.1",
-        "npm": "^10.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-error-boundary": "^4.0.12",
         "react-helmet-async": "^2.0.4",
-        "react-redux": "^8.1.3",
+        "react-redux": "^9.1.0",
         "react-router": "^6.22.0",
         "react-router-dom": "^6.22.0",
-        "redux": "^4.2.1",
+        "redux": "^5.0.1",
         "redux-first-history": "^5.2.0",
-        "redux-thunk": "^2.4.2",
+        "redux-thunk": "^3.1.0",
         "reselect": "^5.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.23.9",
         "@babel/node": "^7.23.9",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/preset-env": "^7.23.9",
         "@babel/preset-react": "^7.23.3",
         "@babel/preset-typescript": "^7.23.3",
         "@eslint/eslintrc": "^3.0.1",
         "@eslint/js": "^8.56.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-        "@redux-devtools/extension": "^3.3.0",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
+        "@testing-library/user-event": "^14.5.2",
         "@types/circular-dependency-plugin": "^5.0.8",
         "@types/core-js": "^2.5.8",
         "@types/eslint": "^8.56.2",
@@ -162,7 +161,7 @@
             "<rootDir>/src/**/*{js,jsx,ts,tsx}"
         ],
         "coveragePathIgnorePatterns": [
-            "<rootDir>/src/index.tsx"
+            "<rootDir>/src/main.tsx"
         ],
         "setupFilesAfterEnv": [
             "<rootDir>/config/testSetup.ts"
