--- a/package.json
+++ b/package.json
@@ -45,120 +45,122 @@
     "type": "module",
     "overrides": {
         "@pmmmwh/react-refresh-webpack-plugin": {
-            "webpack-dev-server": "^5.0.4"
+            "webpack-dev-server": "^5.1.0"
         }
     },
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.24.1",
-        "@reduxjs/toolkit": "^2.2.3",
-        "@sentry/browser": "^7.109.0",
-        "@sentry/react": "^7.109.0",
-        "core-js": "^3.36.1",
-        "date-fns": "^3.6.0",
+        "@babel/runtime-corejs3": "^7.26.0",
+        "@reduxjs/toolkit": "^2.3.0",
+        "@sentry/browser": "^8.38.0",
+        "@sentry/react": "^8.38.0",
+        "core-js": "^3.39.0",
+        "date-fns": "^4.1.0",
         "history": "^5.3.0",
         "normalize.css": "^8.0.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-error-boundary": "^4.0.13",
-        "react-helmet-async": "^2.0.4",
-        "react-redux": "^9.1.0",
-        "react-router": "^6.22.3",
-        "react-router-dom": "^6.22.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-error-boundary": "^4.1.2",
+        "react-helmet-async": "^2.0.5",
+        "react-redux": "^9.1.2",
+        "react-router": "^6.28.0",
+        "react-router-dom": "^6.28.0",
         "redux": "^5.0.1",
         "redux-first-history": "^5.2.0",
         "redux-thunk": "^3.1.0",
-        "reselect": "^5.1.0"
+        "reselect": "^5.1.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.24.3",
-        "@babel/node": "^7.23.9",
-        "@babel/preset-env": "^7.24.3",
-        "@babel/preset-react": "^7.24.1",
-        "@babel/preset-typescript": "^7.24.1",
-        "@eslint/eslintrc": "^3.0.2",
-        "@eslint/js": "^8.57.0",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+        "@babel/core": "^7.26.0",
+        "@babel/node": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "@babel/preset-react": "^7.25.9",
+        "@babel/preset-typescript": "^7.26.0",
+        "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "^9.15.0",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
-        "@testing-library/jest-dom": "^6.4.2",
-        "@testing-library/react": "^14.2.2",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.0.1",
         "@testing-library/user-event": "^14.5.2",
         "@types/circular-dependency-plugin": "^5.0.8",
         "@types/core-js": "^2.5.8",
-        "@types/eslint": "^8.56.7",
+        "@types/eslint": "^9.6.1",
+        "@types/eslint__js": "^8.42.3",
         "@types/eslint-plugin-prettier": "^3.1.3",
-        "@types/history": "^4.7.11",
+        "@types/history": "^5.0.0",
         "@types/html-webpack-plugin": "^3.2.9",
         "@types/http-server": "^0.12.4",
         "@types/ip": "^1.1.3",
-        "@types/jest": "^29.5.12",
-        "@types/jsdom": "^21.1.6",
-        "@types/node": "^20.12.2",
+        "@types/jest": "^29.5.14",
+        "@types/jsdom": "^21.1.7",
+        "@types/node": "^22.9.0",
         "@types/npm": "^7.19.3",
-        "@types/prettier": "^2.7.3",
-        "@types/react": "^18.2.73",
-        "@types/react-dom": "^18.2.23",
-        "@types/react-redux": "^7.1.33",
+        "@types/prettier": "^3.0.0",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@types/react-redux": "^7.1.34",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@types/redux-logger": "^3.0.13",
         "@types/redux-mock-store": "^1.0.6",
-        "@types/sass": "^1.43.1",
+        "@types/sass": "^1.45.0",
         "@types/webpack-bundle-analyzer": "^4.7.0",
-        "@types/webpack-env": "^1.18.4",
-        "@typescript-eslint/eslint-plugin": "^7.5.0",
-        "@typescript-eslint/parser": "^7.5.0",
-        "autoprefixer": "^10.4.19",
+        "@types/webpack-env": "^1.18.5",
+        "@typescript-eslint/parser": "^8.14.0",
+        "autoprefixer": "^10.4.20",
         "babel-jest": "^29.7.0",
-        "babel-loader": "^9.1.3",
-        "babel-plugin-module-resolver": "^5.0.0",
+        "babel-loader": "^9.2.1",
+        "babel-plugin-module-resolver": "^5.0.2",
         "circular-dependency-plugin": "^5.2.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^6.10.0",
-        "css-minimizer-webpack-plugin": "^6.0.0",
-        "eslint": "^8.57.0",
-        "eslint-import-resolver-typescript": "^3.6.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jest": "27.9",
-        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "css-loader": "^7.1.2",
+        "css-minimizer-webpack-plugin": "^7.0.0",
+        "eslint": "9.14",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-import-resolver-typescript": "^3.6.3",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jest": "28.9",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-only-error": "^1.0.2",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react": "^7.34.1",
-        "eslint-plugin-react-hooks": "4.6.0",
-        "eslint-plugin-security": "^2.1.1",
-        "globals": "^15.0.0",
-        "html-webpack-plugin": "^5.6.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react": "^7.37.2",
+        "eslint-plugin-react-hooks": "5.0.0",
+        "eslint-plugin-security": "^3.0.1",
+        "globals": "^15.12.0",
+        "html-webpack-plugin": "^5.6.3",
         "http-server": "^14.1.1",
-        "husky": "^9.0.11",
+        "husky": "^9.1.6",
         "ip": "^2.0.1",
         "jest": "^29.7.0",
         "jest-cli": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "jsdom": "^24.0.0",
-        "mini-css-extract-plugin": "^2.8.1",
-        "postcss": "^8.4.38",
+        "jsdom": "^25.0.1",
+        "mini-css-extract-plugin": "^2.9.2",
+        "postcss": "^8.4.49",
         "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-html": "^1.6.0",
+        "postcss-html": "^1.7.0",
         "postcss-loader": "^8.1.1",
-        "prettier": "^3.2.5",
+        "prettier": "^3.3.3",
         "prettier-eslint": "^16.3.0",
         "prettier-stylelint": "^0.4.2",
-        "react-refresh": "^0.14.0",
+        "react-refresh": "^0.14.2",
         "redux-logger": "^3.0.6",
-        "redux-mock-store": "^1.5.4",
-        "rimraf": "^5.0.5",
-        "sass": "^1.72.0",
-        "sass-loader": "^14.1.1",
-        "style-loader": "^3.3.4",
-        "stylelint": "^16.3.1",
-        "stylelint-config-recommended": "^14.0.0",
-        "stylelint-config-recommended-scss": "^14.0.0",
-        "stylelint-scss": "^6.2.1",
-        "typescript": "^5.4.3",
-        "webpack": "^5.91.0",
-        "webpack-bundle-analyzer": "^4.10.1",
+        "redux-mock-store": "^1.5.5",
+        "rimraf": "^6.0.1",
+        "sass": "^1.81.0",
+        "sass-loader": "^16.0.3",
+        "style-loader": "^4.0.0",
+        "stylelint": "^16.10.0",
+        "stylelint-config-recommended": "^14.0.1",
+        "stylelint-config-recommended-scss": "^14.1.0",
+        "stylelint-scss": "^6.9.0",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.14.0",
+        "webpack": "^5.96.1",
+        "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.4",
-        "webpack-merge": "^5.10.0"
+        "webpack-dev-server": "^5.1.0",
+        "webpack-merge": "^6.0.1"
     },
     "jest": {
         "collectCoverageFrom": [
