React 19 update, together with all other packages to latest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
         "kohler",
         "msjsdiag",
         "pmmmwh",
+        "pogodin",
         "reduxjs",
         "sourcemap",
         "spaceflightnewsapi",
