--- a/package.json
+++ b/package.json
@@ -46,22 +46,21 @@
   "type": "module",
   "dependencies": {
     "@babel/runtime-corejs3": "^7.26.10",
+    "@dr.pogodin/react-helmet": "^2.0.4",
     "@reduxjs/toolkit": "^2.6.1",
-    "@sentry/browser": "^8.55.0",
-    "@sentry/react": "^8.55.0",
+    "@sentry/browser": "^9.5.0",
+    "@sentry/react": "^9.5.0",
     "core-js": "^3.41.0",
     "date-fns": "^4.1.0",
     "history": "^5.3.0",
     "normalize.css": "^8.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2",
-    "react-helmet-async": "^2.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^6.30.0",
-    "react-router-dom": "^6.30.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
     "redux": "^5.0.1",
-    "redux-first-history": "^5.2.0",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.1.1"
   },
@@ -81,7 +80,6 @@
     "@types/circular-dependency-plugin": "^5.0.8",
     "@types/core-js": "^2.5.8",
     "@types/eslint": "^9.6.1",
-    "@types/eslint__js": "^8.42.3",
     "@types/eslint-plugin-prettier": "^3.1.3",
     "@types/history": "^5.0.0",
     "@types/html-webpack-plugin": "^3.2.9",
@@ -92,8 +90,8 @@
     "@types/node": "^22.13.10",
     "@types/npm": "^7.19.3",
     "@types/prettier": "^3.0.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/react-redux": "^7.1.34",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
@@ -105,14 +103,14 @@
     "@typescript-eslint/parser": "^8.26.1",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
-    "babel-loader": "^9.2.1",
+    "babel-loader": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "circular-dependency-plugin": "^5.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "eslint": "9.22",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-import-resolver-typescript": "^3.8.5",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "28.11",
@@ -122,7 +120,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-security": "^3.0.1",
-    "globals": "^15.15.0",
+    "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
     "http-server": "^14.1.1",
     "husky": "^9.1.7",
@@ -130,7 +128,7 @@
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.5.3",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -147,14 +145,14 @@
     "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "stylelint": "^16.15.0",
-    "stylelint-config-recommended": "^14.0.1",
+    "stylelint-config-recommended": "^15.0.0",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-scss": "^6.11.1",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1",
     "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^6.0.1",
     "whatwg-fetch": "^3.6.20"
