--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "2.0.0",
     "author": "Piotr Piech <piotr@piech.dev>",
     "license": "MIT",
-    "description": "React, Redux Toolkit, Jest & 🔥 reload | TypeScript parsed with Babel | Flat ESLint config",
+    "description": "React, Redux Toolkit, Vite, Vitest & 🔥 reload | TypeScript | Flat ESLint config",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Tenemo/reactplate.git"
@@ -13,24 +13,21 @@
     },
     "homepage": "https://github.com/Tenemo/reactplate#readme",
     "scripts": {
-        "start": "cross-env NODE_ENV=development npm run open:src",
-        "prebuild": "npm run lint && npm run tsc && npm test && npm run cleanDist",
-        "build": "cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
-        "build:analyze": "npm run cleanDist && cross-env NODE_ENV=production ANALYZE=true webpack --config config/webpack/webpack.prod.babel.ts",
-        "build:skip": "npm run cleanDist && cross-env NODE_ENV=production webpack --config config/webpack/webpack.prod.babel.ts",
-        "cleanDist": "rimraf ./dist && mkdir dist",
-        "eslint": "eslint . -c eslint.config.js",
-        "eslint:fix": "eslint . --fix -c eslint.config.js",
+        "dev": "cross-env NODE_ENV=development vite",
+        "prebuild": "npm run lint && npm run tsc && npm test",
+        "build": "cross-env NODE_ENV=production vite build",
+        "build:skip": "cross-env NODE_ENV=production vite build",
+        "build:analyze": "cross-env ANALYZE=true vite build",
+        "eslint": "eslint . -c eslint.config.js --report-unused-disable-directives",
+        "eslint:fix": "eslint . --fix -c eslint.config.js --report-unused-disable-directives",
         "stylelint": "stylelint **/*.scss **/*.css",
         "lint": "npm run eslint && npm run stylelint",
         "open:dist": "http-server dist --port 4000 --proxy http://localhost:4000?",
-        "open:src": "cross-env PORT=3000 webpack serve --config config/webpack/webpack.dev.babel.ts",
         "postinstall": "husky init",
         "tsc": "tsc",
-        "test": "cross-env NODE_ENV=test jest",
-        "test:update": "npm run test -- --update",
-        "test:coverage": "npm run test -- --coverage",
-        "test:watch": "npm run test -- --watch",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
         "prepare": "husky"
     },
     "browserslist": [
@@ -44,7 +41,6 @@
     },
     "type": "module",
     "dependencies": {
-        "@babel/runtime-corejs3": "^7.26.10",
         "@dr.pogodin/react-helmet": "^2.0.4",
         "@reduxjs/toolkit": "^2.6.1",
         "@sentry/browser": "^9.5.0",
@@ -60,34 +56,17 @@
         "react-router": "^7.3.0",
         "react-router-dom": "^7.3.0",
         "redux": "^5.0.1",
-        "redux-thunk": "^3.1.0",
-        "reselect": "^5.1.1"
+        "redux-thunk": "^3.1.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.10",
-        "@babel/node": "^7.26.0",
-        "@babel/preset-env": "^7.26.9",
-        "@babel/preset-react": "^7.26.3",
-        "@babel/preset-typescript": "^7.26.0",
         "@eslint/eslintrc": "^3.3.0",
         "@eslint/js": "^9.22.0",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-        "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
-        "@testing-library/jest-dom": "^6.6.3",
+        "@julr/vite-plugin-validate-env": "^1.3.0",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
-        "@types/circular-dependency-plugin": "^5.0.8",
         "@types/core-js": "^2.5.8",
         "@types/eslint": "^9.6.1",
-        "@types/eslint-plugin-prettier": "^3.1.3",
-        "@types/history": "^5.0.0",
-        "@types/html-webpack-plugin": "^3.2.9",
         "@types/http-server": "^0.12.4",
-        "@types/ip": "^1.1.3",
-        "@types/jest": "^29.5.14",
-        "@types/jsdom": "^21.1.7",
-        "@types/node": "^22.13.10",
-        "@types/npm": "^7.19.3",
         "@types/prettier": "^3.0.0",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
@@ -95,20 +74,11 @@
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@types/redux-logger": "^3.0.13",
-        "@types/redux-mock-store": "^1.5.0",
-        "@types/sass": "^1.45.0",
-        "@types/webpack-bundle-analyzer": "^4.7.0",
-        "@types/webpack-env": "^1.18.8",
         "@typescript-eslint/parser": "^8.26.1",
+        "@vitejs/plugin-react": "^4.3.4",
+        "@vitest/coverage-v8": "^3.0.8",
         "autoprefixer": "^10.4.21",
-        "babel-jest": "^29.7.0",
-        "babel-loader": "^10.0.0",
-        "babel-plugin-module-resolver": "^5.0.2",
-        "circular-dependency-plugin": "^5.2.2",
         "cross-env": "^7.0.3",
-        "css-loader": "^7.1.2",
-        "css-minimizer-webpack-plugin": "^7.0.2",
-        "css-modules-typescript-loader": "^4.0.1",
         "eslint": "9.22",
         "eslint-config-prettier": "^10.1.1",
         "eslint-import-resolver-typescript": "^3.8.5",
@@ -125,53 +95,23 @@
         "html-webpack-plugin": "^5.6.3",
         "http-server": "^14.1.1",
         "husky": "^9.1.7",
-        "ip": "^2.0.1",
-        "jest": "^29.7.0",
-        "jest-cli": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
         "jsdom": "^26.0.0",
-        "mini-css-extract-plugin": "^2.9.2",
-        "postcss": "^8.5.3",
         "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-html": "^1.8.0",
-        "postcss-loader": "^8.1.1",
         "prettier": "^3.5.3",
         "prettier-eslint": "^16.3.0",
         "prettier-stylelint": "^0.4.2",
         "react-refresh": "^0.16.0",
         "redux-logger": "^3.0.6",
-        "redux-mock-store": "^1.5.5",
-        "rimraf": "^6.0.1",
-        "sass": "^1.85.1",
-        "sass-loader": "^16.0.5",
-        "style-loader": "^4.0.0",
+        "rollup-plugin-visualizer": "^5.14.0",
+        "sass-embedded": "^1.85.1",
         "stylelint": "^16.15.0",
         "stylelint-config-recommended": "^15.0.0",
         "stylelint-config-recommended-scss": "^14.1.0",
         "stylelint-scss": "^6.11.1",
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.26.1",
-        "webpack": "^5.98.0",
-        "webpack-bundle-analyzer": "^4.10.2",
-        "webpack-cli": "^6.0.1",
-        "webpack-dev-server": "^5.2.0",
-        "webpack-merge": "^6.0.1",
-        "whatwg-fetch": "^3.6.20"
-    },
-    "jest": {
-        "collectCoverageFrom": [
-            "<rootDir>/src/**/*{js,jsx,ts,tsx}"
-        ],
-        "coveragePathIgnorePatterns": [
-            "<rootDir>/src/main.tsx"
-        ],
-        "setupFilesAfterEnv": [
-            "<rootDir>/config/testSetup.ts"
-        ],
-        "moduleNameMapper": {
-            "\\.(jpg|jpeg|png|gif|ico|woff|woff2|svg|ttf|eot)$": "<rootDir>/config/assetsTransformer.ts",
-            "^.+\\.(css|scss)$": "<rootDir>/config/assetsTransformer.ts"
-        },
-        "testEnvironment": "jsdom"
+        "vite": "^6.2.1",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.0.8"
     }
 }
